--- a/gymmy/Base.lproj/Main.storyboard
+++ b/gymmy/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="hhS-6l-Y0m">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Td4-vg-mun">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,6 +9,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="0zt-NT-vi6">
+            <objects>
+                <navigationController id="Td4-vg-mun" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="P88-Zk-fbN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="hhS-6l-Y0m" kind="relationship" relationship="rootViewController" id="v0e-bO-f8H"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r3d-0F-jbh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-666" y="188"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="MNd-xg-ubK">
             <objects>
@@ -48,6 +64,7 @@
                             <outlet property="delegate" destination="hhS-6l-Y0m" id="050-Lt-Tet"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="XzN-e1-tyi"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vJi-nT-zXD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
