--- a/gymmy/Base.lproj/Main.storyboard
+++ b/gymmy/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Td4-vg-mun">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Td4-vg-mun">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -29,34 +30,75 @@
         <scene sceneID="MNd-xg-ubK">
             <objects>
                 <tableViewController id="hhS-6l-Y0m" customClass="ViewController" customModule="gymmy" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" id="T5J-Lr-gP1">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" id="T5J-Lr-gP1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="event" textLabel="5y9-5h-PhH" detailTextLabel="NmM-4s-HiH" rowHeight="50" style="IBUITableViewCellStyleSubtitle" id="VYj-3a-NXM">
-                                <rect key="frame" x="0.0" y="28" width="375" height="50"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="event" rowHeight="70" id="VYj-3a-NXM" customClass="ClassTableViewCell" customModule="gymmy" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VYj-3a-NXM" id="bAD-Qw-pgw">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5y9-5h-PhH">
-                                            <rect key="frame" x="15" y="8" width="33.5" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="7:00am" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O0x-22-cF0" userLabel="Start Time">
+                                            <rect key="frame" x="294" y="18" width="63" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="wsS-dV-02u"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NmM-4s-HiH">
-                                            <rect key="frame" x="15" y="28.5" width="44" height="14.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x0G-cN-IYw" userLabel="icon">
+                                            <rect key="frame" x="18" y="15" width="40" height="40"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="40" id="4Di-bs-9Wa"/>
+                                                <constraint firstAttribute="height" constant="40" id="ceZ-3z-tC7"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="20"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Studio Escape" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJa-2H-EAn" userLabel="Studio">
+                                            <rect key="frame" x="68" y="43" width="229" height="18"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Precision Vinyasa Yoga" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWY-lk-iUB" userLabel="Title">
+                                            <rect key="frame" x="68" y="18" width="229" height="21"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="AJa-2H-EAn" firstAttribute="top" secondItem="sWY-lk-iUB" secondAttribute="bottom" constant="4" id="0iZ-Z9-UYr"/>
+                                        <constraint firstItem="sWY-lk-iUB" firstAttribute="leading" secondItem="x0G-cN-IYw" secondAttribute="trailing" constant="14" id="4zp-au-l5J"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="sWY-lk-iUB" secondAttribute="trailing" constant="10" id="8Em-Ae-ygs"/>
+                                        <constraint firstItem="O0x-22-cF0" firstAttribute="top" secondItem="bAD-Qw-pgw" secondAttribute="topMargin" constant="10" id="Kds-96-bUe"/>
+                                        <constraint firstItem="AJa-2H-EAn" firstAttribute="leading" secondItem="sWY-lk-iUB" secondAttribute="leading" id="Lnm-nZ-1Ki"/>
+                                        <constraint firstItem="sWY-lk-iUB" firstAttribute="leading" secondItem="x0G-cN-IYw" secondAttribute="trailing" constant="10" id="Mg4-Ao-6p8"/>
+                                        <constraint firstItem="x0G-cN-IYw" firstAttribute="leading" secondItem="bAD-Qw-pgw" secondAttribute="leadingMargin" constant="10" id="Q5N-pp-XA7"/>
+                                        <constraint firstItem="sWY-lk-iUB" firstAttribute="top" secondItem="bAD-Qw-pgw" secondAttribute="topMargin" constant="10" id="QQb-e9-JuP"/>
+                                        <constraint firstItem="x0G-cN-IYw" firstAttribute="centerY" secondItem="bAD-Qw-pgw" secondAttribute="centerY" id="VP3-IN-sGf"/>
+                                        <constraint firstItem="sWY-lk-iUB" firstAttribute="top" secondItem="bAD-Qw-pgw" secondAttribute="topMargin" constant="10" id="bzq-Wb-QRU"/>
+                                        <constraint firstItem="O0x-22-cF0" firstAttribute="leading" secondItem="sWY-lk-iUB" secondAttribute="trailing" constant="10" id="fyO-ln-1o1"/>
+                                        <constraint firstItem="O0x-22-cF0" firstAttribute="trailing" secondItem="bAD-Qw-pgw" secondAttribute="trailingMargin" constant="-10" id="g4c-lD-UzG"/>
+                                        <constraint firstItem="AJa-2H-EAn" firstAttribute="width" secondItem="sWY-lk-iUB" secondAttribute="width" id="uXT-Bg-6IY"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="icon" destination="x0G-cN-IYw" id="oOb-mV-Bfd"/>
+                                    <outlet property="studioLabel" destination="AJa-2H-EAn" id="oVw-cJ-bFo"/>
+                                    <outlet property="timeLabel" destination="O0x-22-cF0" id="9mt-84-skd"/>
+                                    <outlet property="titleLabel" destination="sWY-lk-iUB" id="Jcn-vn-yzZ"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
