--- a/gymmy/Base.lproj/Main.storyboard
+++ b/gymmy/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Td4-vg-mun">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Td4-vg-mun">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <navigationController id="Td4-vg-mun" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="P88-Zk-fbN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -43,7 +43,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7:00am" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O0x-22-cF0" userLabel="Start Time">
-                                            <rect key="frame" x="297" y="18" width="60" height="18"/>
+                                            <rect key="frame" x="289" y="21" width="60" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="60" id="wsS-dV-02u"/>
                                             </constraints>
@@ -52,19 +52,19 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Studio Escape" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJa-2H-EAn" userLabel="Studio">
-                                            <rect key="frame" x="58" y="43" width="229" height="18"/>
+                                            <rect key="frame" x="66" y="46" width="213" height="18"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Precision Vinyasa Yoga" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWY-lk-iUB" userLabel="Title">
-                                            <rect key="frame" x="58" y="18" width="229" height="21"/>
+                                            <rect key="frame" x="66" y="21" width="213" height="21"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BSS-rR-OQH">
-                                            <rect key="frame" x="8" y="15" width="40" height="40"/>
+                                            <rect key="frame" x="16" y="15" width="40" height="40"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="40" id="R1b-Xr-efB"/>
                                                 <constraint firstAttribute="height" constant="40" id="ihk-iN-H9X"/>
@@ -132,18 +132,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vinyasa Flow Power Hour" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7XX-1g-Yp8">
-                                <rect key="frame" x="16" y="84" width="343" height="34"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Studio Energy" translatesAutoresizingMaskIntoConstraints="NO" id="eaq-hT-rvN" userLabel="Image">
+                                <rect key="frame" x="0.0" y="64" width="375" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="gNM-fj-4Q1"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Vinyasa Flow Power Hour" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7XX-1g-Yp8">
+                                <rect key="frame" x="16" y="395" width="343" height="32"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MkQ-Fd-Hla">
-                                <rect key="frame" x="16" y="138" width="343" height="152.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MkQ-Fd-Hla">
+                                <rect key="frame" x="16" y="447" width="343" height="180"/>
                                 <string key="text">Vinyasa yoga classes focus on creating fluid transitional moves between postures. Alignment and form are never sacrificed in the processes of flexibility development, and asana progressions,
 
 All levels welcome.</string>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -152,14 +158,18 @@ All levels welcome.</string>
                         <constraints>
                             <constraint firstItem="MkQ-Fd-Hla" firstAttribute="top" secondItem="7XX-1g-Yp8" secondAttribute="bottom" constant="20" id="1Jy-tO-Vcw"/>
                             <constraint firstItem="7XX-1g-Yp8" firstAttribute="trailing" secondItem="sXS-wt-MY1" secondAttribute="trailingMargin" id="4zE-cC-Y20"/>
+                            <constraint firstItem="eaq-hT-rvN" firstAttribute="top" secondItem="t4d-sk-LjR" secondAttribute="bottom" id="AdN-CU-doF"/>
+                            <constraint firstItem="7XX-1g-Yp8" firstAttribute="top" secondItem="eaq-hT-rvN" secondAttribute="bottom" constant="70" id="B8D-PQ-MGc"/>
                             <constraint firstAttribute="trailingMargin" secondItem="MkQ-Fd-Hla" secondAttribute="trailing" id="Li2-ar-9Or"/>
-                            <constraint firstItem="7XX-1g-Yp8" firstAttribute="top" secondItem="t4d-sk-LjR" secondAttribute="bottom" constant="20" id="m9x-0L-1En"/>
+                            <constraint firstAttribute="trailing" secondItem="eaq-hT-rvN" secondAttribute="trailing" id="YiZ-cJ-w33"/>
+                            <constraint firstItem="eaq-hT-rvN" firstAttribute="leading" secondItem="sXS-wt-MY1" secondAttribute="leading" id="rXF-A7-Hj0"/>
                             <constraint firstItem="7XX-1g-Yp8" firstAttribute="leading" secondItem="sXS-wt-MY1" secondAttribute="leadingMargin" id="yEf-Dj-Jje"/>
                             <constraint firstItem="MkQ-Fd-Hla" firstAttribute="leading" secondItem="sXS-wt-MY1" secondAttribute="leadingMargin" id="znH-sA-F17"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="descriptionLabel" destination="MkQ-Fd-Hla" id="fBm-m0-czO"/>
+                        <outlet property="imageView" destination="eaq-hT-rvN" id="6Xl-9h-3t1"/>
                         <outlet property="titleLabel" destination="7XX-1g-Yp8" id="vbB-iE-9L3"/>
                     </connections>
                 </viewController>
@@ -168,4 +178,7 @@ All levels welcome.</string>
             <point key="canvasLocation" x="901.60000000000002" y="187.55622188905548"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Studio Energy" width="673" height="448"/>
+    </resources>
 </document>
